--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,11 @@
+0.10.1
+- Experimental: 
+  remove Debugger.stop on exit exception raise. May allow catchpoints
+  to work and tracing user code handling Exit exceptions
+- add "toggle" command
+- fix bug in "info variables" when string had embedded %s'
+- Number keys move stack position in Emacs stack secondary buffer.
+
 0.10.0
 - '-r' option can be used to require additional libraries.
 - --noquit option added to stay in debugger when the program exits
