Remove short -n option; --no-stop remains.

--- a/doc/rdebug.1
+++ b/doc/rdebug.1
@@ -180,7 +180,7 @@ Activate post-mortem mode.
 .B \-\-no-control
 Do not automatically start control thread.
 .TP
-.B \-n | \-\-no\-stop
+.B \-\-no\-stop
 Do not stop when script is loaded.
 .TP
 .B \-p | \-\-port=PORT
